# springer-dl-scripts

./: .gitignore  README.md  dl_from_springer.py  pyproject.toml
